--- a/frontend/src/components/styles/AboutMeSection.module.css
+++ b/frontend/src/components/styles/AboutMeSection.module.css
@@ -1,7 +1,7 @@
 .aboutMeImagesFirstRow {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  justify-content: space-between;
 }
 
 .textWrapperAboutMe {
@@ -10,7 +10,7 @@
   overflow: auto;
   padding-right: 3rem;
   padding-left: 3rem;
-  margin-left: 1rem;
+  margin-right: 3%;
   padding-top: 2rem;
   padding-bottom: 2rem;
   background: #191c29;
@@ -44,7 +44,7 @@
   border-radius: 50px;
   width: 43%;
   height: 100%;
-  margin-right: 30px;
+
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -70,25 +70,24 @@
 }
 
 @media (max-width: 1000px) {
-
   .aboutMeImagesFirstRow {
     flex-direction: column;
+    gap: 2rem;
   }
 
-.aboutMeSnowshoeingPhoto {
-  border-radius: 50px;
-  width: 100%;
-}
+  .aboutMeSnowshoeingPhoto {
+    border-radius: 50px;
+    width: 100%;
+  }
 
-.aboutMeSkiingPhoto {
-  border-radius: 50px;
-  width: 100%;
-}
+  .aboutMeSkiingPhoto {
+    border-radius: 50px;
+    width: 100%;
+  }
 
-.textWrapperAboutMe {
-  max-height: 50vh;
-}
-
+  .textWrapperAboutMe {
+    max-height: 50vh;
+  }
 }
 
 @media (max-width: 600px) {
@@ -110,6 +109,7 @@
     margin-left: 0rem;
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-right: 0px;
     max-height: none;
   }
 
